--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $r_{i} = d_{i} - y_{i}$. This function is a norm that quantifies the \"*distance*\" between the vectors $\\mathbf{d}$ and $\\mathbf{y}$. It is called <a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)#Euclidean_norm\">Euclidean norm</a>. Notice that this function equals to zero if $\\mathbf{d} = \\mathbf{y}$ and it is greater than zero if $\\mathbf{d} \\ne \\mathbf{y}$.\n",
+    "where $r_{i} = d_{i} - y_{i}$. This function is a norm that quantifies the \"*distance*\" between the vectors $\\mathbf{d}$ and $\\mathbf{y}$. It is called <a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)#Euclidean_norm\">*\"Euclidean norm\"*</a> or *\"Euclidean distance\"*. Notice that this function equals to zero if $\\mathbf{d} = \\mathbf{y}$ and it is greater than zero if $\\mathbf{d} \\ne \\mathbf{y}$.\n",
     "\n",
     "So, the problem of determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$ can be thought of the problem of determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing the minimum Euclidean norm of the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$."
    ]
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practical situations, instead of determining the vector $\\mathbf{x}^{\\ast}$ minimizing the Euclidean norm of $\\mathbf{r}$, we determine the vector $\\mathbf{x}^{\\ast}$ minimizing the Squared Euclidean norm of $\\mathbf{r}$, which is given by:"
+    "In practical situations, instead of determining the vector $\\mathbf{x}^{\\ast}$ minimizing the Euclidean norm of $\\mathbf{r}$, we determine the vector $\\mathbf{x}^{\\ast}$ minimizing the *\"Squared Euclidean norm\"* (<a href=\"https://en.wikipedia.org/wiki/Euclidean_distance\">*\"Squared Euclidean distance\"*</a>) of $\\mathbf{r}$, which is given by:"
    ]
   },
   {
