--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -1,6 +1,91 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LDL<sup>T</sup> decomposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider a $N \\times N$ matrix $\\mathbf{A}$ that is symmetric and admits an LU decomposition, e.g., the matrix $\\mathbf{A}$ satisfies the following equation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A} = \\mathbf{L} \\, \\mathbf{U} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By considering the existence of the inverse $\\mathbf{L}^{-1}$, we may rewrite the equation above as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{L}^{-1} \\, \\mathbf{A} &= \\mathbf{U} \\\\\n",
+    "\\mathbf{L}^{-1} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top} &= \\mathbf{U} \\, \\mathbf{L}^{-\\top}\n",
+    "\\end{split} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{L}^{-\\top} = \\left( \\mathbf{L}^{-1} \\right)^{\\top} = \\left( \\mathbf{L}^{\\top} \\right)^{-1}$. Notice that"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\left( \\mathbf{L}^{-1} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top} \\right)^{\\top} \n",
+    "&= \\left( \\mathbf{L}^{-\\top} \\right)^{\\top} \\, \\mathbf{A}^{\\top} \\, \\left( \\mathbf{L}^{-1} \\right)^{\\top}\\\\\n",
+    "&= \\left[ \\left( \\mathbf{L}^{-1} \\right)^{\\top} \\right]^{\\top} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top} \\\\\n",
+    "&= \\mathbf{L}^{-1} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top}\n",
+    "\\end{split} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which means that $\\mathbf{L}^{-1} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top}$ and, consequently, $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$ are symmetric matrices. Now, let's analyze the matrix $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$. First, consider two square matrices $\\mathbf{B}$ and $\\mathbf{C}$. Then, bear in mind that:\n",
+    "\n",
+    "1. If $\\mathbf{B}$ is upper (lower) triangular, then $\\mathbf{B}^{-1}$ is also upper (lower) triangular;\n",
+    "\n",
+    "2. If $\\mathbf{B}$ and $\\mathbf{C}$ are upper (lower) triangular, then $\\mathbf{BC}$ is also upper (lower) triangular;\n",
+    "\n",
+    "3. If $\\mathbf{B}$ is unit upper (lower) triangular, then $\\mathbf{B}^{-1}$ is also unit upper (lower) triangular;\n",
+    "\n",
+    "4. If $\\mathbf{B}$ and $\\mathbf{C}$ are unit upper (lower) triangular, then $\\mathbf{BC}$ is also unit upper (lower) triangular."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These statements can be verified numericaly by running the cell below. It uses the routines [`numpy.random.rand`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.random.rand.html), [`numpy.triu`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.triu.html), [`numpy.tril`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.tril.html), [`numpy.indentity`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.identity.html), [`numpy.dot`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) and [`numpy.linalg.inv`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -28,11 +113,223 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B = \n",
+      "[[ 0.76232337  0.773993    0.04934886  0.97607779  0.06170274]\n",
+      " [ 0.          0.24348637  0.49218532  0.0057127   0.67401715]\n",
+      " [ 0.          0.          0.11145379  0.69038759  0.35207957]\n",
+      " [ 0.          0.          0.          0.12305399  0.80226336]\n",
+      " [ 0.          0.          0.          0.          0.64298304]]\n",
+      "\n",
+      "\n",
+      "B^-1 = \n",
+      "[[   1.31177927   -4.16987611   17.83355231 -110.26575224  132.06097998]\n",
+      " [   0.            4.10700616  -18.13673759  101.56449743 -121.09820518]\n",
+      " [   0.            0.            8.97232831  -50.33875141   57.89571375]\n",
+      " [   0.            0.            0.            8.12651439  -10.13962155]\n",
+      " [   0.            0.            0.            0.            1.55525096]]\n",
+      "\n",
+      "\n",
+      "BC = \n",
+      "[[ 0.0034238   1.29782368  1.25710973  1.38242975  0.7138184 ]\n",
+      " [ 0.          0.22145888  0.64254935  0.42891649  0.45724576]\n",
+      " [ 0.          0.          0.1037343   0.37293063  0.22156328]\n",
+      " [ 0.          0.          0.          0.05514951  0.13936707]\n",
+      " [ 0.          0.          0.          0.          0.09737577]]\n"
+     ]
+    }
+   ],
    "source": [
-    "A = np.reshape(np.random.rand(N*N), (N,N))\n",
+    "#Example of upper triangular matrices\n",
+    "B = np.triu(np.reshape(np.random.rand(N*N), (N,N)))\n",
+    "C = np.triu(np.reshape(np.random.rand(N*N), (N,N)))\n",
     "\n",
-    "A = np.dot(A.T, A)"
+    "#Example of lower triangular matrices\n",
+    "#B = np.tril(np.reshape(np.random.rand(N*N), (N,N)))\n",
+    "#C = np.tril(np.reshape(np.random.rand(N*N), (N,N)))\n",
+    "\n",
+    "#Example of unit upper triangular matrices\n",
+    "#B = np.triu(np.reshape(np.random.rand(N*N), (N,N)), k=1)\n",
+    "#B += np.identity(N)\n",
+    "#C = np.triu(np.reshape(np.random.rand(N*N), (N,N)), k=1)\n",
+    "#C += np.identity(N)\n",
+    "\n",
+    "#Example of unit lower triangular matrices\n",
+    "#B = np.tril(np.reshape(np.random.rand(N*N), (N,N)), k=1)\n",
+    "#B += np.identity(N)\n",
+    "#C = np.tril(np.reshape(np.random.rand(N*N), (N,N)), k=1)\n",
+    "#C += np.identity(N)\n",
+    "\n",
+    "Binv = np.linalg.inv(B)\n",
+    "\n",
+    "BC = np.dot(B,C)\n",
+    "\n",
+    "print 'B = \\n', B\n",
+    "print '\\n'\n",
+    "print 'B^-1 = \\n', Binv\n",
+    "print '\\n'\n",
+    "print 'BC = \\n', BC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we conclude that, besides being symmetric, $\\mathbf{U} \\, \\mathbf{L}^{\\top}$ is also upper triangular. In this case, $\\mathbf{U} \\, \\mathbf{L}^{\\top}$ must be a diagonal matrix, which we conveniently represent as $\\mathbf{D}$. So,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{L}^{-1} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top} = \\mathbf{D}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and, finally,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A} = \\mathbf{L} \\, \\mathbf{D} \\, \\mathbf{L}^{\\top} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the LDL<sup>T</sup> decomposition. Any matrix that admits the LU decomposition and is symmetric admits a LDL<sup>T</sup> decomposition as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be shown that, given a symmetric matrix $\\mathbf{A}$, the matrices $\\mathbf{L}$ and $\\mathbf{D}$ can be calculated as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "    for j in range(N):\n",
+    "\n",
+    "        v = L[j,:j]*d[:j]\n",
+    "\n",
+    "        d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
+    "\n",
+    "        L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where `v` is an auxiliary variable and `d` is an 1D array containing the diagonal elements of $\\mathbf{D}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solving a linear system bu applying the LDL<sup>T</sup> decomposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider a linear a linaer system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A} \\mathbf{x} = \\mathbf{y} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{A}$ is a square symmetric matrix that admitis a LU decomposition. In this case, the linear system can be rewritten as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{A} \\, &\\mathbf{x} &= \\mathbf{y} \\\\\n",
+    "\\mathbf{L} \\, \\mathbf{D} \\, \\mathbf{L}^{\\top} &\\mathbf{x} &= \\mathbf{y}\n",
+    "\\end{split} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, the linear system can be solved in three steps:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{L} \\, &\\mathbf{w} &= \\mathbf{y} \\\\\n",
+    "\\mathbf{D} \\, &\\mathbf{z} &= \\mathbf{w} \\\\\n",
+    "\\mathbf{L}^{\\top} &\\mathbf{x} &= \\mathbf{z}\n",
+    "\\end{split} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Implement the algorithm presented above for calculating the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
+    "\n",
+    "2. Solve a linear system by using the calculated `L` and `d`. Use the functions implemented previously for solving triangular and diagonal systems.\n",
+    "\n",
+    "3. Test if `A` = `LDL`<sup>T</sup>\n",
+    "\n",
+    "4. Test your solution of the linear system againt the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to create a symmetric matrix?"
    ]
   },
   {
@@ -41,21 +338,13 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.21883681  1.12427711  0.84556036  0.91567967  1.26498952]\n",
-      " [ 1.12427711  1.37911447  1.16736836  0.77475554  0.92861631]\n",
-      " [ 0.84556036  1.16736836  1.15172195  0.53171608  0.69847219]\n",
-      " [ 0.91567967  0.77475554  0.53171608  0.85274456  1.06439242]\n",
-      " [ 1.26498952  0.92861631  0.69847219  1.06439242  1.72352733]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print A"
+    "N = 5\n",
+    "\n",
+    "A = np.reshape(np.random.rand(N*N), (N,N))\n",
+    "\n",
+    "A = np.dot(A.T, A)"
    ]
   },
   {
@@ -64,281 +353,22 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "#v = np.zeros(N)\n",
-    "d = np.zeros(N)\n",
-    "L = np.identity(N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for j in range(N):\n",
-    "\n",
-    "    v = L[j,:j]*d[:j]\n",
-    "        \n",
-    "    d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
-    "    \n",
-    "    L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "A_calc = np.dot(L, np.dot(np.diag(d), L.T))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(A, A_calc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "v1 = np.zeros(N)\n",
-    "d1 = np.zeros(N)\n",
-    "L1 = np.identity(N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for j in range(N):\n",
-    "    \n",
-    "    for i in range(j):\n",
-    "        v1[i] = d1[i]*L1[j,i]\n",
-    "        \n",
-    "    d1[j] = A[j,j]\n",
-    "    for i in range(j):\n",
-    "        d1[j] -= v1[i]*L1[j,i]\n",
-    "    \n",
-    "    for i in range(j+1,N):\n",
-    "        L1[i,j] = A[i,j]\n",
-    "        for k in range(j):\n",
-    "            L1[i,j] -= v1[k]*L1[i,k]\n",
-    "        L1[i,j] = L1[i,j]/d1[j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "A_calc = np.dot(L1, np.dot(np.diag(d1), L1.T))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(A, A_calc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(L, L1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(d, d1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y = np.random.rand(N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = np.linalg.solve(A,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 21.51393868 -28.16059541  16.97716206   9.84692573 -13.54234636]\n"
+      "[[ 2.37236061  2.1176592   2.26495545  1.16510657  1.0490748 ]\n",
+      " [ 2.1176592   2.56340889  2.10077217  0.99854764  1.29929365]\n",
+      " [ 2.26495545  2.10077217  2.95203926  1.49470026  1.27651369]\n",
+      " [ 1.16510657  0.99854764  1.49470026  0.77740187  0.56441059]\n",
+      " [ 1.0490748   1.29929365  1.27651369  0.56441059  0.91402017]]\n"
      ]
     }
    ],
    "source": [
-    "print x"
+    "print A"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "w = np.linalg.solve(L,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "z = np.linalg.solve(np.diag(d),w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x_calc = np.linalg.solve(L.T, z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(x, x_calc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
